--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -136,5 +136,6 @@
 	"t_add_evaluation": "Add evaluation",
 	"t_institution": "Institution",
 	"t_add_young_people": "Add young people",
-	"t_yplcs_list": "Questionnaire about the young person leaving the child care system"
+	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
+	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!"
 }
