instrument 2 template ready - V1

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -129,5 +129,6 @@
 	"t_institution": "учреждение",
 	"t_add_young_people": "Add young people",
 	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
-	"t_child_placed_in_specialized_boarding_schools": "t_child_placed_in_specialized_boarding_schools"
+	"t_child_placed_in_specialized_boarding_schools": "t_child_placed_in_specialized_boarding_schools",
+	"t_cibs_list": "t_cibs_list"
 }
