--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -130,5 +130,6 @@
 	"t_add_young_people": "Add young people",
 	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
 	"t_child_placed_in_specialized_boarding_schools": "t_child_placed_in_specialized_boarding_schools",
-	"t_cibs_list": "t_cibs_list"
+	"t_cibs_list": "t_cibs_list",
+	"not_in_registry": "The institution does not appear in the Registry"
 }
