--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -139,5 +139,6 @@
 	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
 	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!",
 	"t_child_placed_in_specialized_boarding_schools": "Children placed in specialized boarding schools",
-	"t_cibs_list": "Questionnaire about the child placed in specialized boarding schools"
+	"t_cibs_list": "Questionnaire about the child placed in specialized boarding schools",
+	"not_in_registry": "The institution does not appear in the Registry"
 }
