users update - WIP

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -151,5 +151,6 @@
 	"t_instrument6": "I6. Data sheet on entries and exits from childcare institutions",
 	"t_instrument7": "I7. Family-Type Children's Home Questionnaire",
 	"t_instrument8": "I8. Patronat Family Questionnaire",
-	"t_instrument9": "I9. External evaluation form"
+	"t_instrument9": "I9. External evaluation form",
+	"t_instruments": "Instruments list"
 }
