adaugat buton finalizeaza

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -152,5 +152,6 @@
 	"t_instrument7": "I7. Family-Type Children's Home Questionnaire",
 	"t_instrument8": "I8. Patronat Family Questionnaire",
 	"t_instrument9": "I9. External evaluation form",
-	"t_instruments": "Instruments list"
+	"t_instruments": "Instruments list",
+	"t_button_complete": "Completed"
 }
