integrat noile traduceri

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,134 +1,157 @@
 {
-	"password": "Пароль",
-	"username": "Код учреждения",
-	"login": "Авторизоваться",
-	"login_message": "Привет! Пожалуйста, войдите",
-	"empty_username_password": "Пожалуйста, заполните все поля",
-	"User error. Please login again.": "Ошибка пользователя. Пожалуйста, войдите снова.",
-	"logout": "Выход",
-	"back": "Назад",
-	"menuScreen": "Пожалуйста, выберите опцию",
-	"dashboard": "Панель приборов",
-	"dataEntry": "Ввод данных",
-	"importData": "Импортировать данные",
-	"exportData": "Экспорт данных",
-	"Institution details saved.": "Данные об учреждении сохранены.",
-	"User updated.": "Пользователь обновлен.",
-	"Please fill all fields": "Пожалуйста заполните все поля",
-	"User deleted.": "Пользователь удален.",
-	"Are you sure you want to delete this user?": "Вы уверены, что хотите удалить этого пользователя?",
-	"ATU code must be 12 characters long": "Код ATE е должен состоять из 12 символов.",
-	"Please enter a valid email address": "Пожалуйста, введите действительный адрес электронной почты",
-	"Instrument error.": "Ошибка прибора.",
-	"User added.": "Пользователь добавлен.",
-	"t_service_level_view_data_collectors": "Просмотр уровня обслуживания/Сборщики данных",
-	"t_service_level_questionnaires": "Анкеты уровня обслуживания",
-	"t_status": "Положение дел",
-	"t_actions": "Действия",
-	"t_individual_level_questionnaires": "Анкеты индивидуального уровня",
-	"t_total_to_be_filled": "Итого для заполнения",
-	"t_completion_rate": "Скорость завершения",
-	"t_completed": "Завершенный",
-	"t_in_progress": "В ходе выполнения",
-	"t_not_started": "Не начался",
-	"t_view_edit": "Посмотреть/Редактировать",
-	"t_institution_details": "Подробности об учреждении",
-	"t_questionnaire_on_the_material_resources": "Анкета по материальной базе",
-	"t_data_sheet_on_entries_and_exits": "Паспорт на входы и выходы",
-	"t_family_type_children_s_home_questionnaire": "Анкета детского дома семейного типа",
-	"t_staff_working_in_the_service": "Сотрудники, работающие в сервисе",
-	"t_children_placed_in_the_service": "Дети помещены на службу",
-	"t_young_people_who_left_care_system": "Молодые люди, покинувшие систему опеки",
-	"t_patronat_family_questionnaires": "Семейные анкеты Патронат",
-	"t_view": "Посмотреть",
-	"t_regionalCoordinator_level_view_regionalCoordinators": "Представление на уровне регионального координатора / региональные координаторы",
-	"t_details": "Подробности",
-	"t_export": "Экспорт",
-	"t_export_data": "Экспорт данных",
-	"t_filter": "Фильтр",
-	"t_filter_by": "Сортировать по",
-	"t_external_evaluation_forms": "Формы внешней оценки",
-	"t_extenal_evaluators": "Внешние оценщики",
-	"t_import": "Импортировать",
-	"t_reports": "Отчеты",
-	"t_institution_name": "Название учебного заведения",
-	"t_institution_code": "Код учреждения",
-	"t_institution_address": "Адрес учреждения",
-	"t_institution_atu_code": "Учрежденческий код административно-территориальной единицы",
-	"t_institution_region": "Область",
-	"t_institution_district": "Округ",
-	"t_institution_type": "Тип учреждения",
-	"t_institution_type_group_1": "Детские учреждения:",
-	"t_institution_type_group_2": "Школ-интернатов:",
-	"t_institution_type_option_1": "11. Детский дом (Дом ребенка)",
-	"t_institution_type_option_1_value": "11",
-	"t_institution_type_option_2": "12. Дом Мехрибонлик",
-	"t_institution_type_option_2_value": "12",
-	"t_institution_type_option_3": "13. Муруватский дом для детей с ограниченными возможностями.",
-	"t_institution_type_option_3_value": "13",
-	"t_institution_type_option_4": "21. Тип I-II для глухих или слабослышащих детей.",
-	"t_institution_type_option_4_value": "21",
-	"t_institution_type_option_5": "22. Тип III-IV для слепых или слабовидящих детей.",
-	"t_institution_type_option_5_value": "22",
-	"t_institution_type_option_6": "23. V тип для детей с тяжелыми нарушениями речи.",
-	"t_institution_type_option_6_value": "23",
-	"t_institution_type_option_7": "24. VI тип для детей с нарушениями опорно-двигательного аппарата.",
-	"t_institution_type_option_7_value": "24",
-	"t_institution_type_option_8": "25. Тип VII для детей с детьми с задержкой психического развития/психическими расстройствами.",
-	"t_institution_type_option_8_value": "25",
-	"t_institution_type_option_9": "26. Тип VIII для детей с ограниченными интеллектуальными возможностями.",
-	"t_institution_type_option_9_value": "26",
-	"t_no_children": "Количество детей, помещенных на службу",
-	"t_no_staff": "Количество сотрудников, работающих в сервисе",
-	"t_no_patronat": "Количество",
-	"t_no_young_left": "Число молодых людей, покинувших систему опеки",
-	"t_button_save": "Сохранять",
-	"t_users": "Пользователи",
-	"t_name": "Имя",
-	"t_email": "Электронная почта",
-	"t_role": "Роль",
-	"t_country": "Страна",
-	"t_city": "Город",
-	"t_add": "Добавлять",
-	"t_first_name": "Имя",
-	"t_last_name": "Фамилия",
-	"t_patronymics": "Отчество",
-	"t_username": "Имя пользователя",
-	"t_password": "Пароль",
-	"t_add_user": "Добавить пользователя",
-	"t_position": "Позиция",
-	"t_profession": "Профессия",
-	"t_phone": "Телефон",
-	"t_edit_user": "Изменить пользователя",
-	"t_cpis_list": "t_cpis_list",
-	"t_add_child": "t_add_child",
-	"t_pin": "t_pin",
-	"t_choose": "--- chooseRU ---",
-	"t_choose_value": "-9",
-	"t_csr_list": "t_csr_list",
-	"t_add_staff": "t_add_staff",
-	"t_id": "ID",
-	"t_euid": "t_euid",
-	"t_ftch_list": "t_ftch_list",
-	"t_add_family_home": "t_add_family_home",
-	"Value_up_to_ten": "The value must be up to 10",
-	"Start_before_end": "Admission date before exit date",
-	"t_notatall": "1. Cовсем нет",
-	"t_notatall_value": "1",
-	"t_total": "10. Всего",
-	"t_total_value": "10",
-	"At_least_one_disability": "At least one disability",
-	"At_least_one_brother_or_sister": "At least one brother or sister",
-	"t_pfq_list": "t_pfq_list",
-	"t_add_patronat_family": "t_add_patronat_family",
-	"t_eef_list": "External evaluation form of the childcare institutions and boarding schools",
-	"t_add_evaluation": "Add evaluation",
-	"t_institution": "учреждение",
-	"t_add_young_people": "Add young people",
-	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
-	"t_child_placed_in_specialized_boarding_schools": "t_child_placed_in_specialized_boarding_schools",
-	"t_cibs_list": "t_cibs_list",
-	"not_in_registry": "The institution does not appear in the Registry",
-	"t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system",
-	"t_tqyp_list": "t_tqyp_list"
+    "password": "Пароль",
+    "username": "Код учреждения",
+    "login": "Логин",
+    "login_message": "Привет! Пожалуйста войдите",
+    "empty_username_password": "Пожалуйста заполните все поля",
+    "User error. Please login again.": "Ошибка! Пожалуйста войдите повторно!",
+    "logout": "Выход",
+    "back": "Назад",
+    "menuScreen": "Пожалуйста выберите опцию",
+    "dashboard": "Приборная панель",
+    "dataEntry": "Ввод данных",
+    "importData": "Импорт данных",
+    "exportData": "Экспорт данных",
+    "Institution details saved.": "Данные об учреждении сохранены",
+    "User updated.": "Пользователь обновлен",
+    "Please fill all fields": "Пожалуйста заполните все поля",
+    "User deleted.": "Пользователь удален",
+    "Are you sure you want to delete this user?": "Вы уверены, что хотите удалить этого пользователя?",
+    "ATU code must be 12 characters long": "Код ATU должен составлять не менее 12 символов",
+    "Please enter a valid email address": "Пожалуйста введите действующий адрес электронной почты",
+    "Instrument error.": "Ошибка прибора",
+    "User added.": "Пользователь добавлен",
+    "t_service_level_view_data_collectors": "Просмотр уровня услуг/ Сборщики данных",
+    "t_service_level_questionnaires": "Вопросники уровня услуг",
+    "t_status": "Статус",
+    "t_actions": "Действия",
+    "t_individual_level_questionnaires": "Вопросники индивидуального уровня",
+    "t_total_to_be_filled": "Всего заполнить",
+    "t_completion_rate": "Уровень заполнения",
+    "t_completed": "Завершено",
+    "t_in_progress": "В процессе",
+    "t_not_started": "Не начато",
+    "t_view_edit": "Просмотр / Редактирование",
+    "t_institution_details": "Данные об учреждении",
+    "t_view": "Просмотр",
+    "t_regionalCoordinator_level_view_regionalCoordinators": "Уровень просмотра Регионального координатора/региональных координаторов",
+    "t_details": "Данные",
+    "t_export": "Экспорт",
+    "t_export_data": "",
+    "t_filter": "Фильтр",
+    "t_filter_by": "Фильтровать по",
+    "t_external_evaluators": "Внешние оценщики",
+    "t_import": "Импорт",
+    "t_reports": "Отчеты",
+    "t_institution_name": "Название учреждения",
+    "t_institution_code": "Код учреждения",
+    "t_institution_address": "Адрес учреждения",
+    "t_institution_atu_code": "Код административно-территориальной единицы",
+    "t_institution_region": "Oбласть",
+    "t_institution_district": "Район",
+    "t_institution_type": "Тип учреждения",
+    "t_institution_type_group_1": "Детские учреждения:",
+    "t_institution_type_group_2": "Школы-интернаты",
+    "t_institution_type_option_1": "Детский дом ( Дом ребенка)",
+    "t_institution_type_option_1_value": "11",
+    "t_institution_type_option_2": "Дом Мехрибонлик",
+    "t_institution_type_option_2_value": "12",
+    "t_institution_type_option_3": "Дом-интерант Мурувват для детей с инвалидностью",
+    "t_institution_type_option_3_value": "13",
+    "t_institution_type_option_4": "Тип I-II для глухих и слабослышащих детей",
+    "t_institution_type_option_4_value": "21",
+    "t_institution_type_option_5": "Тип III-IV для слепых и слабовидящих детей",
+    "t_institution_type_option_5_value": "22",
+    "t_institution_type_option_6": "Тип V для детей с тяжелыми нарушениями речи",
+    "t_institution_type_option_6_value": "23",
+    "t_institution_type_option_7": "Тип VI для детей с нарушением опорно-двигательного аппарата",
+    "t_institution_type_option_7_value": "24",
+    "t_institution_type_option_8": "Тип VII для детей с задержкой психического развития",
+    "t_institution_type_option_8_value": "25",
+    "t_institution_type_option_9": "Тип VIII для детей с задержкой интеллектуального развития",
+    "t_institution_type_option_9_value": "26",
+    "t_no_children": "Количество детей, получающих услуги",
+    "t_no_staff": "Количество персонала, работающих в учреждении",
+    "t_no_patronat": "Количество",
+    "t_no_young_left": "Количество молодых людей, покинувших систему альтернативной опеки",
+    "t_button_save": "Сохранить",
+    "t_users": "Пользователи",
+    "t_name": "Имя",
+    "t_email": "Электронная почта",
+    "t_role": "Роль",
+    "t_country": "Область",
+    "t_city": "Город",
+    "t_add": "Добавить",
+    "t_first_name": "Имя",
+    "t_last_name": "Фамилия",
+    "t_patronymics": "Отчество",
+    "t_username": "Имя пользователя",
+    "t_password": "Пароль",
+    "t_add_user": "Добавить пользователя",
+    "t_position": "Должность",
+    "t_profession": "Профессия",
+    "t_phone": "Телефон",
+    "t_edit_user": "Просмотр пользователя",
+    "t_cpis_list": "",
+    "t_add_child": "Добавить ребенка",
+    "t_csr_list": "Реестр персонала учреждения",
+    "t_add_staff": "Добавить сотрудника",
+    "t_pin": "ПИН",
+    "Instrument saved.": "Инструмент сохранен",
+    "Completati corect toate campurile!": "Все данные должны быть внесены аккуратно",
+    "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "Следующие поля обязательны для заполнения:ПИН, LK1a, LK1b, LK1c!",
+    "t_choose": "--- выбрать ---",
+    "t_choose_value": "-9",
+    "The following fields are mandatory: E1, EUID!": "Следующие поля обязательны для заполнения: E1, EUID!",
+    "t_euid": "EUID",
+    "t_id": "ID",
+    "Are you sure you want to delete this item?": "Вы уверены что хотите это удалить?",
+    "Item deleted.": "Удалено",
+    "t_ftch_list": "Список Детских домов семейного типа",
+    "t_add_family_home": "Добавить Детский дом семейного типа",
+    "Value_up_to_ten": "Значение не должно иметь более 10-ти знаков",
+    "Start_before_end": "Дата принятия ребенка до даты выхода ребенка",
+    "t_notatall": "1. Совсем нет",
+    "t_notatall_value": "1",
+    "t_total": "10.Всего",
+    "t_total_value": "10",
+    "The following fields are mandatory: IFM1, IFM2, IFM3!": "Следующие поля обязательны для заполнения: IFM1,IFM2,IFM3!",
+    "At_least_one_disability": "Минимум одна инвалидность",
+    "At_least_one_brother_or_sister": "Минимум одна сестра или брат",
+    "t_pfq_list": "Вопросник по патронатным семьям",
+    "t_add_patronat_family": "Добавить патронатную семью",
+    "The following fields are mandatory: IG1, IG2, IG3!": "Следующие поля обязательны для заполнения: IG1,IG2,IG3!",
+    "t_eef_list": "Форма внешней оценки детских учреждений и школ-интернатов",
+    "t_add_evaluation": "Добавить оценку",
+    "t_institution": "Учреждение",
+    "t_add_young_people": "Добавьте молодого человека",
+    "t_yplcs_list": "Анкета о молодом человеке, выходящем из системы опеки  детей",
+    "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "Следующие поля обязательны для заполнения: PI1, PI1A,PI1B, PI1C",
+    "t_cibs_list": "Анкета о ребенке, помещенном в специализированную школу-интернат",
+    "not_in_registry": "Учреждения нет в Реестре",
+    "t_tqyp_list": "",
+    "t_patronat_family_questionnaires": "Анкета для патронатных семей",
+    "t_instrument8": "I8. Анкета для патронатных семей",
+    "t_children_placed_in_the_service": "Анкета о ребенке, помещенном в систему опеки",
+    "t_instrument1": "I1Анкета о ребенке, помещенном в систему опеки",
+    "t_family_type_children_s_home_questionnaire": "Анкета детского дома семейного типа",
+    "t_instrument7": "I7. Анкета детского дома семейного типа",
+    "t_questionnaire_on_the_material_resources": "Материальная база учреждения и условия проживания проживания детей в них",
+    "t_instrument4": "I4. Материальная база учреждения и условия проживания проживания детей в них",
+    "t_staff_working_in_the_service": "Кадровый учет детских учреждений и специализированных школ-интернатов",
+    "t_instrument3": "I3. Кадровый учет детских учреждений и специализированных школ-интернатов",
+    "t_data_sheet_on_entries_and_exits": "Лист сбора сводных данных о поступлении и выходе из детского учреждения и специализированной школы-интерната",
+    "t_instrument6": "I6. Лист сбора сводных данных о поступлении и выходе из детского учреждения и специализированной школы-интерната",
+    "t_young_people_who_left_care_system": "Анкета о молодом человеке, выходящем из системы опеки  детей",
+    "t_instrument5": "I5. Анкета о молодом человеке, выходящем из системы опеки  детей",
+    "t_child_placed_in_specialized_boarding_schools": "Анкета о ребенке, помещенном в специализированную школу-интернат",
+    "t_instrument2": "I2. Анкета о ребенке, помещенном в специализированную школу-интернат",
+    "t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "Опросник по отслеживанию молодых людей покинувших систему альтернативной опеки",
+    "t_instrument5A": "I5A. Опросник по отслеживанию молодых людей покинувших систему альтернативной опеки",
+    "t_external_evaluation_forms": "Форма внешней оценки детских учреждений и школ-интернатов",
+    "t_instrument9": "I9. Форма внешней оценки детских учреждений и школ-интернатов",
+    "t_instruments": "",
+    "t_button_complete": "",
+    "t_number_to_be_filled": "",
+    "t_number_completed": ""
 }
