--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -1,133 +1,157 @@
 {
-	"password": "Parol",
-	"username": "Tashkilot kodi",
-	"login": "Tizimga kirish",
-	"login_message": "Salom! Iltimos, tizimga kiring",
-	"empty_username_password": "Iltimos, barcha maydonlarni to'ldiring",
-	"User error. Please login again.": "Foydalanuvchi xatosi. Iltimos, qayta kiring.",
-	"logout": "Chiqish",
-	"back": "Orqaga",
-	"menuScreen": "Iltimos, variantni tanlang",
-	"dashboard": "Boshqaruv paneli",
-	"dataEntry": "Kiritish",
-	"importData": "Import qilish",
-	"exportData": "Eksport qilish",
-	"Institution details saved.": "Tashkilot tafsilotlari saqlandi.",
-	"User updated.": "Foydalanuvchi yangilandi.",
-	"Please fill all fields": "Iltimos, barcha maydonlarni to'ldiring",
-	"User deleted.": "Foydalanuvchi o'chirildi.",
-	"Are you sure you want to delete this user?": "Bu foydalanuvchini o'chirib tashlamoqchimisiz?",
-	"ATU code must be 12 characters long": "MHB kodi 12 belgidan iborat bo'lishi kerak",
-	"Please enter a valid email address": "Iltimos, to'g'ri e-pochta manzilini kiriting",
-	"Instrument error.": "Asbob xatosi.",
-	"User added.": "Foydalanuvchi qo'shildi.",
-	"t_service_level_view_data_collectors": "Xizmat darajasi ko'rinishi / Ma'lumot yig'uvchilar",
-	"t_service_level_questionnaires": "Xizmat darajasi bo'yicha so'rovnomalar",
-	"t_status": "Holat",
-	"t_actions": "Harakatlar",
-	"t_individual_level_questionnaires": "Individual darajadagi anketalar",
-	"t_total_to_be_filled": "Jami to'ldirilishi kerak",
-	"t_completion_rate": "Tugatish darajasi",
-	"t_completed": "Bajarildi",
-	"t_in_progress": "Jarayonda",
-	"t_not_started": "Boshlanmagan",
-	"t_view_edit": "Ko'rish/tahrirlash",
-	"t_institution_details": "Tashkilot tafsilotlari",
-	"t_questionnaire_on_the_material_resources": "Moddiy resurslar bo'yicha so'rovnoma",
-	"t_data_sheet_on_entries_and_exits": "Kirish va chiqishlar bo'yicha ma'lumotlar varag'i",
-	"t_family_type_children_s_home_questionnaire": "Oila tipidagi bolalar uyi so'rovnomasi",
-	"t_staff_working_in_the_service": "Xizmatda ishlaydigan xodimlar",
-	"t_children_placed_in_the_service": "Xizmatga joylashtirilgan bolalar",
-	"t_young_people_who_left_care_system": "G'amxo'rlik tizimini tark etgan yoshlar",
-	"t_patronat_family_questionnaires": "Patronat oilasi uchun anketalar",
-	"t_view": "Ko'rinish",
-	"t_regionalCoordinator_level_view_regionalCoordinators": "Mintaqaviy koordinator darajasidagi ko'rinish / mintaqaviy koordinatorlar",
-	"t_details": "Tafsilotlar",
-	"t_export": "Eksport",
-	"t_export_data": "Ma'lumotlarni eksport qilish",
-	"t_filter": "Filtr",
-	"t_filter_by": "Filtrlash",
-	"t_external_evaluation_forms": "Tashqi baholash shakllari",
-	"t_extenal_evaluators": "Ekstensial baholovchilar",
-	"t_import": "Import",
-	"t_reports": "Hisobotlar",
-	"t_institution_name": "Tashkilot nomi",
-	"t_institution_code": "Tashkilot kodi",
-	"t_institution_address": "Tashkilot manzili",
-	"t_institution_atu_code": "Ma'muriy-hududiy birlikning muassasa kodeksi",
-	"t_institution_region": "Mintaqa",
-	"t_institution_district": "Tuman",
-	"t_institution_type": "Tashkilot turi",
-	"t_institution_type_group_1": "Bolalar bog'chasi:",
-	"t_institution_type_group_2": "Maktab-internatlar:",
-	"t_institution_type_option_1": "11. Bolalar uyi (Bolalar uyi)",
-	"t_institution_type_option_1_value": "11",
-	"t_institution_type_option_2": "12. Mehribonlik uyi",
-	"t_institution_type_option_2_value": "12",
-	"t_institution_type_option_3": "13. Imkoniyati cheklangan bolalar uchun “Muruvat” uyi",
-	"t_institution_type_option_3_value": "13",
-	"t_institution_type_option_4": "21. Kar yoki eshitish qobiliyati zaif bolalar uchun I-II tip",
-	"t_institution_type_option_4_value": "21",
-	"t_institution_type_option_5": "22. Ko'zi ojiz yoki zaif ko'ruvchi bolalar uchun III-IV tip",
-	"t_institution_type_option_5_value": "22",
-	"t_institution_type_option_6": "23. Og'ir nutq nuqsonlari bo'lgan bolalar uchun V tip",
-	"t_institution_type_option_6_value": "23",
-	"t_institution_type_option_7": "24. Tayanch-harakat apparati nuqsonlari bo'lgan bolalar uchun VI tip",
-	"t_institution_type_option_7_value": "24",
-	"t_institution_type_option_8": "25. Aqliy rivojlanishi sust/ruhiy buzilishlari bor bolalar uchun VII tip",
-	"t_institution_type_option_8_value": "25",
-	"t_institution_type_option_9": "26. Aqli zaif bolalar uchun VIII toifa",
-	"t_institution_type_option_9_value": "26",
-	"t_no_children": "Xizmatga joylashtirilgan bolalar soni",
-	"t_no_staff": "Xizmatda ishlaydigan xodimlar soni",
-	"t_no_patronat": "soni",
-	"t_no_young_left": "Qariyalar tizimini tark etgan yoshlar soni",
-	"t_button_save": "Saqlash",
-	"t_users": "Foydalanuvchilar",
-	"t_name": "Ism",
-	"t_email": "Elektron pochta",
-	"t_role": "Rol",
-	"t_country": "Mamlakat",
-	"t_city": "Shahar",
-	"t_add": "Qo'shish",
-	"t_first_name": "Ism",
-	"t_last_name": "Familiya",
-	"t_patronymics": "Ota ismi",
-	"t_username": "Foydalanuvchi nomi",
-	"t_password": "Parol",
-	"t_add_user": "Foydalanuvchi qo'shish",
-	"t_position": "Lavozim",
-	"t_profession": "Kasb-hunar",
-	"t_phone": "Telefon",
-	"t_edit_user": "Foydalanuvchini tahrirlash",
-	"t_cpis_list": "t_cpis_list",
-	"t_add_child": "t_add_child",
-	"t_pin": "t_pin",
-	"t_choose": "--- chooseUZ ---",
-	"t_choose_value": "-9",
-	"t_csr_list": "t_csr_list",
-	"t_add_staff": "t_add_staff",
-	"t_id": "ID",
-	"t_euid": "t_euid",
-	"t_ftch_list": "t_ftch_list",
-	"t_add_family_home": "t_add_family_home",
-	"Value_up_to_ten": "The value must be up to 10",
-	"Start_before_end": "Admission date before exit date",
-	"t_notatall": "1. Not al all",
-	"t_notatall_value": "1",
-	"t_total": "10. Total",
-	"t_total_value": "10",
-	"At_least_one_disability": "At least one disability",
-	"At_least_one_brother_or_sister": "At least one brother or sister",
-	"t_pfq_list": "t_pfq_list",
-	"t_add_patronat_family": "t_add_patronat_family",
-	"t_eef_list": "External evaluation form of the childcare institutions and boarding schools",
-	"t_add_evaluation": "Add evaluation",
-	"t_institution": "Tashkilot",
-	"t_add_young_people": "Add young people",
-	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
-	"t_child_placed_in_specialized_boarding_schools": "t_child_placed_in_specialized_boarding_schools",
-	"t_cibs_list": "t_cibs_list",
-	"not_in_registry": "The institution does not appear in the Registry",
-	"t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system"
+    "password": "Parol",
+    "username": "Muassasa kodi",
+    "login": "Login",
+    "login_message": "Salom! Iltimos, kiring",
+    "empty_username_password": "Iltimos, barcha qatorlarni to'ldiring",
+    "User error. Please login again.": "Xato! Iltimos, qayta kiring!",
+    "logout": "Chiqish",
+    "back": "Orqaga",
+    "menuScreen": "Iltimos, variantni tanlang",
+    "dashboard": "Asboblar paneli",
+    "dataEntry": "Ma'lumotlarni kiritish",
+    "importData": "Ma'lumotlarni import qilish",
+    "exportData": "Ma'lumotlarni eksport qilish",
+    "Institution details saved.": "Muassasaga oid ma'lumotlar saqlandi",
+    "User updated.": "Foydalanuvchi yangilandi",
+    "Please fill all fields": "Iltimos, barcha qatorlarni to'ldiring",
+    "User deleted.": "Foydalanuvchi o'chirildi",
+    "Are you sure you want to delete this user?": "Ushbu foydalanuvchini o'chirishni xohlayotganingizga aminmisiz?",
+    "ATU code must be 12 characters long": "ATU kodi 12 ta belgidan kam bo'lmasligi lozim",
+    "Please enter a valid email address": "Iltimos, faol elektron pochta manzilini kiriting",
+    "Instrument error.": "Qurilma xatosi",
+    "User added.": "Foydalanuvchi qo'shildi",
+    "t_service_level_view_data_collectors": "Xizmat darajasini ko'rish / Ma'lumot yig'uvchilar",
+    "t_service_level_questionnaires": "Xizmat darajasi so'rovnomalari",
+    "t_status": "Holat",
+    "t_actions": "Harakatlar",
+    "t_individual_level_questionnaires": "Individual darajadagi so'rovnomalar",
+    "t_total_to_be_filled": "Barchasi to'ldiriladi",
+    "t_completion_rate": "To'ldirish darajasi",
+    "t_completed": "Tugatildi",
+    "t_in_progress": "Jarayonda",
+    "t_not_started": "Boshlanmadi",
+    "t_view_edit": "Ko'rish / Tahrirlash",
+    "t_institution_details": "Muassasaga oid ma'lumotlar",
+    "t_view": "Ko'rish",
+    "t_regionalCoordinator_level_view_regionalCoordinators": "Hududiy koordinator/hududiy koordinatorlarning ko'rish darajasi",
+    "t_details": "Ma'lumotlar",
+    "t_export": "Eksport",
+    "t_export_data": "",
+    "t_filter": "Filtr",
+    "t_filter_by": "... bo'yicha filtrlash",
+    "t_external_evaluators": "Tashqi baholovchilar",
+    "t_import": "Import",
+    "t_reports": "Hisobotlar",
+    "t_institution_name": "Muassasa nomi",
+    "t_institution_code": "Muassasa kodi",
+    "t_institution_address": "Muassasa manzili",
+    "t_institution_atu_code": "Ma'muriy-hududiy birlik kodi",
+    "t_institution_region": "Viloyati",
+    "t_institution_district": "Tumani",
+    "t_institution_type": "Muassasa turi",
+    "t_institution_type_group_1": "Bolalar muassasalari:",
+    "t_institution_type_group_2": "Maktrab-internatlar",
+    "t_institution_type_option_1": "Bolalar uyi (bola uyi)",
+    "t_institution_type_option_1_value": "11",
+    "t_institution_type_option_2": "Mexribonlik uyi",
+    "t_institution_type_option_2_value": "12",
+    "t_institution_type_option_3": "Nogironligi mavjud bolalar uchun Muruvvat internat-uyi",
+    "t_institution_type_option_3_value": "13",
+    "t_institution_type_option_4": "I-II tur. Kar va eshitish qobiliyati past bolalar uchun",
+    "t_institution_type_option_4_value": "21",
+    "t_institution_type_option_5": "III-IV tur. Ko'r va ko'zi ojiz bolalar uchun",
+    "t_institution_type_option_5_value": "22",
+    "t_institution_type_option_6": "V tur. Og'ir nutq buzilishi bo'lgan bolalar uchun",
+    "t_institution_type_option_6_value": "23",
+    "t_institution_type_option_7": "VI tur. Mushak-skelet tizimining buzilishi bo'lgan bolalar uchun",
+    "t_institution_type_option_7_value": "24",
+    "t_institution_type_option_8": "VII tur. Aqliy rivojlanishida nuqsoni bo'lgan bolalar uchun",
+    "t_institution_type_option_8_value": "25",
+    "t_institution_type_option_9": "VIII tur. Intellektual rivojlanishida nuqsoni bo'lgan bolalar uchun",
+    "t_institution_type_option_9_value": "26",
+    "t_no_children": "Xizmatga ega bo'layotgan bolalar soni",
+    "t_no_staff": "Muassasada ishlayotgan xodimlar soni",
+    "t_no_patronat": "Soni",
+    "t_no_young_left": "Muqobil vasiylik tizimini tark etgan yosh shaxslar soni",
+    "t_button_save": "Saqlash",
+    "t_users": "Foydalanuvchilar",
+    "t_name": "Ism",
+    "t_email": "Elektron pochta",
+    "t_role": "Roli",
+    "t_country": "Viloyati",
+    "t_city": "Shahar",
+    "t_add": "Qo'shish",
+    "t_first_name": "Ism",
+    "t_last_name": "Familiya",
+    "t_patronymics": "Otasining ismi",
+    "t_username": "Foydalanuvchi ismi",
+    "t_password": "Parol",
+    "t_add_user": "Foydalanuvchini qo'shish",
+    "t_position": "Lavozim",
+    "t_profession": "Kasb",
+    "t_phone": "Telefon",
+    "t_edit_user": "Foydalanuvchi ko'rinishi",
+    "t_cpis_list": "CPIS varog'i",
+    "t_add_child": "Bolani qo'shish",
+    "t_csr_list": "Muassasa xodimlarining reestri",
+    "t_add_staff": "Xodimni qo'shish",
+    "t_pin": "PIN",
+    "Instrument saved.": "Shakl saqlandi",
+    "Completati corect toate campurile!": "Barcha ma'lumotlar tog'ri kiritilishi kerak",
+    "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "Quyidagi maydonlarni to'ldirish majburiy: PIN, LK1a, LK1b, LK1c!",
+    "t_choose": "--- tanlang ---",
+    "t_choose_value": "-9",
+    "The following fields are mandatory: E1, EUID!": "Quyidagi maydonlarni to'ldirish majburiy: E1, EUID!",
+    "t_euid": "EUID",
+    "t_id": "ID",
+    "Are you sure you want to delete this item?": "Siz buni o'chirishni xohlayotganingizga aminmisiz?",
+    "Item deleted.": "O'chirildi",
+    "t_ftch_list": "Oilaviy turdagi bolalar uylari ro'yxati",
+    "t_add_family_home": "Oilaviy turdagi bolalar uylarini qo'shish",
+    "Value_up_to_ten": "Qiymat 10 ta belgidan oshmasligi lozim",
+    "Start_before_end": "Bolani qabul qilish sanasi bolaning chiqish sanasidan oldin",
+    "t_notatall": "1. Umuman yo'q",
+    "t_notatall_value": "1",
+    "t_total": "10.Jami",
+    "t_total_value": "10",
+    "The following fields are mandatory: IFM1, IFM2, IFM3!": "Quyidagi maydonlarni to'ldirish majburiy: IFM1,IFM2,IFM3!",
+    "At_least_one_disability": "Kamida bitta nogironlik",
+    "At_least_one_brother_or_sister": "Kamida bitta opa/singil yoki aka/uka",
+    "t_pfq_list": "Patronat oilalar uchun so'rovnoma",
+    "t_add_patronat_family": "Patronat oilani qo'shish",
+    "The following fields are mandatory: IG1, IG2, IG3!": "Quyidagi maydonlarni to'ldirish majburiy: IG1,IG2,IG3!",
+    "t_eef_list": "Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
+    "t_add_evaluation": "Bahoni qo'shish",
+    "t_institution": "Muassasa",
+    "t_add_young_people": "Yosh shaxsni qo'shish",
+    "t_yplcs_list": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+    "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "Quyidagi maydonlarni to'ldirish majburiy: PI1, PI1A,PI1B, PI1C",
+    "t_cibs_list": "Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to'g'risida so'rovnoma",
+    "not_in_registry": "Muassasa Reestrda mavjud emas",
+    "t_tqyp_list": "",
+    "t_patronat_family_questionnaires": "Patronat oilasi uchun so'rovnoma",
+    "t_instrument8": "I8. Patronat oilasi uchun so'rovnoma",
+    "t_children_placed_in_the_service": "Bolalarning vasiylik tizimiga joylashtirilgan bola toʻgʻrisida soʻrovnoma",
+    "t_instrument1": "I1. Bolalarning vasiylik tizimiga joylashtirilgan bola toʻgʻrisida soʻrovnoma",
+    "t_family_type_children_s_home_questionnaire": "Oilaviy bolalar uyi so'rоvnomasi",
+    "t_instrument7": "I7. Oilaviy bolalar uyi so'rоvnomasi",
+    "t_questionnaire_on_the_material_resources": "Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
+    "t_instrument4": "I4. Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
+    "t_staff_working_in_the_service": "Bolalar muassasalari va ixtisoslashtirilgan maktab-internatlarning hodimlar reestri",
+    "t_instrument3": "I3. Bolalar muassasalari va ixtisoslashtirilgan maktab-internatlarning hodimlar reestri",
+    "t_data_sheet_on_entries_and_exits": "Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo‘yicha umumlashgan ma'lumotlarni yig‘ish varaqasi",
+    "t_instrument6": "I6. Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo‘yicha umumlashgan ma'lumotlarni yig‘ish varaqasi",
+    "t_young_people_who_left_care_system": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+    "t_instrument5": "I5. Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+    "t_child_placed_in_specialized_boarding_schools": "Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to’g’risida so’rovnoma",
+    "t_instrument2": "I2. Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to’g’risida so’rovnoma",
+    "t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
+    "t_instrument5A": "I5A. Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
+    "t_external_evaluation_forms": "Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
+    "t_instrument9": "I9. Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
+    "t_instruments": "",
+    "t_button_complete": "",
+    "t_number_to_be_filled": "",
+    "t_number_completed": ""
 }
